# HRUFT

./: CMakeLists.txt  README.md
include/: cli.h  crypto.h  file_mapper.h  protocol.h  session.h  socket.h  utils.h
lib/: json.hpp
lib/win/: blake3.lib
src/: cli.cpp  crypto.cpp  file_mapper.cpp  main.cpp  receiver.cpp  session.cpp  socket.cpp  utils.cpp
tests/: test_protocol.cpp
